--- a/userinterface/package.json
+++ b/userinterface/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-search-field": "^1.2.0",
+    "socket.io-client": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
